# DAF

./: .gitignore  CMakeLists.txt  README.md  compile.sh  daf_10min  daf_1min  daf_2min  daf_big_10min  daf_parallel  daf_parallel_10min  daf_parallel_twitter  daf_parallel_unlimited  daf_twitter  daf_twitter_10min  dag.cpp  dag.h  example_running.sh  human  human_40n  human_40n.dag  human_6n  hw3.java  main.cpp  program  report.odt  sort_result.py  yeast  yeast_400_j2k.dag  yeast_400n  yeast_400n.dag  yeast_50n
dataset_example/: data.graph  query.graph
global/: global.h  log.h  timer.h
include/: backtrack.h  backtrack_helper.h  candidate_space.h  dag.h  data_graph.h  graph.h  match_leaves.h  maximum_matching.h  ordering.h  query_graph.h
main/: CMakeLists.txt  main.cc
src/: backtrack.cc  candidate_space.cc  dag.cc  data_graph.cc  graph.cc  hw3.java  j2k_graph.java  j2k_io.java  longestPath.java  match_leaves.cc  minDup.java  ordering.cc  query_graph.cc
